# pits-device

./: .coveragerc  .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-package.yml  python-publish.yml
diagram/: PinTheSky.drawio
pinthesky/: __init__.py  __main__.py  camera.py  cloudwatch.py  combiner.py  config.py  connection.py  conversion.py  events.py  handler.py  health.py  input.py  output.py  session.py  upload.py
scripts/: bump.sh
service/: aws-iot-device-client.json  default.iam.policy.json  default.iam.role.json  default.policy.json  inspect.sh  install.sh  install_device_client.sh  main.sh  mainv2.sh  pinthesky.env  pinthesky.service  remove.sh  upgrade-pinthesky.sh  workflow.sh
service/pits/: _common.sh  inspect.sh  install.sh  remove.sh
service/pitsctl/: _common.sh  inspect.sh  install.sh  workflow.sh
tests/: test_camera.py  test_cloudwatch.py  test_combiner.py  test_config.py  test_connection.py  test_handler.py  test_health.py  test_input.py  test_output.py  test_session.py  test_upload.py
