[metadata]
name = pinthesky
version = 0.0.1

[options]
packages = pinthesky
install_requires =
    boto3
    requests
    numpy
    picamera
    inotify-simple
extra_require=
    pytest

[options.entry_points]
console_scripts =
    pinthesky = pinthesky.__main__:main

[build-system]
requires =
    setuptools
    wheel
build-backend = "setuptools.build_meta"