[metadata]
name = pinthesky
version = 0.1.0

[options]
packages = pinthesky
install_requires =
    boto3
    requests
    numpy
    picamera
    inotify-simple
extra_require=
    pytest
    requests-mock

[options.entry_points]
console_scripts =
    pinthesky = pinthesky.__main__:main

[build-system]
requires =
    setuptools
    wheel
build-backend = "setuptools.build_meta"