[metadata]
name = pinthesky
version = 0.1.0
author = philcali
author_email = philcali@gmail.com
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/philcali/pits-device
classifiers =
    Progamming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent

[options]
packages = pinthesky
install_requires =
    boto3
    requests
    numpy
    picamera
    inotify-simple
extra_require=
    pytest
    requests-mock

[options.entry_points]
console_scripts =
    pinthesky = pinthesky.__main__:main

[build-system]
requires =
    setuptools
    wheel
build-backend = "setuptools.build_meta"